--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
   height: 100vh;
   background-color: yellow;
   overflow-y: scroll;
+  display: flex;
 }
 
 .blue {
@@ -28,38 +29,42 @@ main {
   height: calc(100% - 90px);
 }
 
-.list ul li a {
-  text-decoration: none;
-  font-size: 20px;
-  padding-left: 10px;
-}
 
-.spotify {
-  height: 60px;
-  margin-top: 10px;
-  padding-left: 5px;
-}
-
-.left-nav {
+.left-nav{
   height: 100%;
   width: 250px;
+  background-color: orange;
 }
 
-.top-logo {
-  width: 100%;
+.logo{
   height: 90px;
-  background-color: black;
-}
-
-.list {
   width: 100%;
-  height: 70%;
-  background-color: black;
-  overflow-y: scroll;
-  line-height: 40px;
+  background-color: green;
 }
 
-.list .home a {
+.list{
+  height: 20%;
+  width: 100%;
+background-color: pink;
+}
+
+.play-list{
+  height: 60%;
+  width: 100%;
+  background-color: blue;
+  overflow-y: scroll;
+}
+
+.nav-footer{
+  height: 20%;
+  width: 100%;
+  background-color: black;
+}
+
+
+
+
+/* .list .home a {
   color: white;
 }
 
@@ -70,29 +75,19 @@ main {
 
 .list ul li a {
   color: grey;
-}
-
-
-.nav-footer {
-  height:30%;
-  width: 100%;
-  background-color: darkblue;
-}
+} */
 
 .main-content {
   width: calc(100% - 250px);
   height: 100%;
-  padding-top: 90px;
   background-color: #2f374f;
   right: 0;
-
+  bottom: 0;
+  padding-top: 90px;
   overflow-y: scroll;
 }
 
-hr{
-width: 80%;
-margin-left: 20px;
-}
+
 
 #call-to-action {
   position: fixed;
@@ -103,6 +98,7 @@ margin-left: 20px;
   height: 90px;
   opacity: 0.5;
   text-align: right;
+  z-index: 1;
 }
 
 #call-to-action .btn {
@@ -114,10 +110,11 @@ margin-left: 20px;
   right: 5px;
 }
 
-#call-to-action a.btn {
+ #call-to-action a.btn {
   border-radius: 20px;
-  border: 1px solid white;
-  padding: 6px 25px;
+  border: 2px solid white;
+  padding: 10px 25px;
+  text-transform: uppercase;
 }
 
 .font-big {
