--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body{
+font-family:monospace sans-serif;
+}
+
 .container {
   width: 100%;
   height: 100vh;
@@ -128,21 +132,43 @@ padding: 5px 5px;
   background-color: black;
 }
 
+.nav-list{
+  height: 80px;
+  width: 100%;
+  background-color: #2F374F;
+  display: flex;
+  padding-left: 168px;
 
+}
+.nav-list ul li {
+display: inline;
+text-align: center;
+position: relative;
+left:100px;
+margin-left:20px;
+font-size: 15px;
+text-transform: uppercase;
 
-
-/* .list .home a {
-  color: white;
 }
 
-.list .play a {
-  color: white;
-  font-size: 16px;
+.nav-list ul li a{
+  color:grey;
+  font-weight: bold;
+}
+.recent{
+  background-color: #2F374F;
+  height: 50px;
+  width: 100%;
+  color:white;
+  padding-left: 10px;
 }
 
-.list ul li a {
-  color: grey;
-} */
+
+
+
+
+
+
 
 .main-content {
   width: calc(100% - 250px);
