--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,11 @@
   box-sizing: border-box;
 }
 
-body{
-font-family: 'Open Sans', sans-serif;
-font-family: 'Roboto', sans-serif;
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
+
 .container {
   width: 100%;
   height: 100vh;
@@ -33,41 +34,40 @@ main {
   height: calc(100% - 90px);
 }
 
-
-.left-nav{
+.left-nav {
   height: 100%;
   width: 250px;
   background-color: orange;
 }
 
-.logo{
+.logo {
   height: 90px;
   width: 100%;
   background-color: black;
 }
 
-ul li a{
+ul li a {
   list-style: none;
   text-decoration: none;
 }
 
-.spotify{
+.spotify {
   height: 60px;
   /* width: 100%; */
-margin: 10px 5px;
+  margin: 10px 5px;
 }
 
-.name{
+.name {
   margin-left: 10px;
   justify-content: flex-start;
   line-height: 30px;
 }
 
-.name a{
-  color:white;
+.name a {
+  color: white;
 }
 
-hr{
+hr {
   width: 90%;
   padding-left: 20px;
 }
@@ -75,130 +75,120 @@ hr{
 .list ul li a {
   list-style: none;
   text-decoration: none;
-line-height: 25px;
-padding-left: 15px;}
-
+  line-height: 25px;
+  padding-left: 15px;
+}
 
 /* reusable colors */
-.white{
+.white {
   color: white;
 }
-.grey{
-  color:grey;
+
+.grey {
+  color: grey;
 }
+
 /* reusable colors */
-
-h4{
-padding-left: 15px;
-font-size: 15px;
-padding-bottom: 5px;
+h4 {
+  padding-left: 15px;
+  font-size: 15px;
+  padding-bottom: 5px;
 }
 
-span{
+span {
   padding-left: 15px;
   font-size: 18px;
   padding-bottom: 15px;
-
 }
 
-.list{
+.list {
   height: 15%;
   width: 100%;
-background-color: black;
-padding: 5px 5px;
-
-
+  background-color: black;
+  padding: 5px 5px;
 }
 
-.play-list{
+.play-list {
   height: 60%;
   width: 100%;
   background-color: black;
   overflow-y: scroll;
 }
 
-.play-list ul li a{
+.play-list ul li a {
   list-style: none;
   text-decoration: none;
-  color:grey;
+  color: grey;
   margin-left: 15px;
   padding-top: 5px;
   line-height: 25px;
 }
 
-.nav-footer{
+.nav-footer {
   height: 20%;
   width: 100%;
   background-color: black;
 }
 
-.nav-list{
+.nav-list {
   height: 80px;
   width: 100%;
   background-color: #2F374F;
   display: flex;
   padding-left: 168px;
-
 }
+
 .nav-list ul li {
-display: inline;
-text-align: center;
-position: relative;
-left:100px;
-margin-left:20px;
-font-size: 15px;
-text-transform: uppercase;
-
+  display: inline;
+  text-align: center;
+  position: relative;
+  left: 100px;
+  margin-left: 20px;
+  font-size: 15px;
+  text-transform: uppercase;
 }
 
-.nav-list ul li a{
-  color:grey;
+.nav-list ul li a {
+  color: grey;
   font-weight: bold;
 }
-.recent{
+
+.recent {
   background-color: #2F374F;
   height: 50px;
   width: 100%;
-  color:white;
+  color: white;
   padding-left: 10px;
 }
 
-#albums{
+#albums {
   height: 100%;
-  width:100%;
+  width: 100%;
   background-color: #2F374F;
- display: flex;
- padding-right: 30px;
-flex-direction:row;
-justify-content: space-around;
+  display: flex;
+  padding-right: 30px;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
-.img1{
+.img1 {
   /* height: 1000PX; */
   margin-top: 10px;
   width: calc(100% / 7);
 }
 
-
-.imageheavy{
+.imageheavy {
   height: 180px;
-  width:180px;
-
+  width: 180px;
 }
-.title{
+
+.title {
   height: 50px;
   width: 100%;
   font-size: 14px;
   text-align: center;
   line-height: 16px;
-
 }
-
-
-
-
-
-
 
 .main-content {
   width: calc(100% - 250px);
@@ -209,8 +199,6 @@ justify-content: space-around;
   padding-top: 90px;
   overflow-y: scroll;
 }
-
-
 
 #call-to-action {
   position: fixed;
@@ -233,7 +221,7 @@ justify-content: space-around;
   right: 5px;
 }
 
- #call-to-action a.btn {
+#call-to-action a.btn {
   border-radius: 20px;
   border: 2px solid white;
   padding: 10px 25px;
@@ -254,49 +242,117 @@ footer {
   margin-bottom: 0px;
 }
 
+/* .title-sub{
+  height: 50px;
+  width: 100%;
+  font-size: 14px;
+  line-height: 16px;
 
+} */
+.sect1 {
+  height: 500px;
+  width: 100%;
+  /* background-color: purple; */
+  right: 0;
+  padding-left: 10px;
+  display: flex;
+}
 
+.lil-albi {
+  /* height: 60px; */
+  width: 100%;
+  /* background-color: green; */
+  padding-left: 10px;
+  line-height: 29px;
+}
 
+.tito {
+  font-size: 15px;
+}
+
+.photos {
+  height: 300px;
+  width: 200px;
+  /* background-color: yellow; */
+  padding-top: 20px;
+}
+
+.photo1 {
+  height: 180px;
+  width: 180px;
+  ;
+}
+
+.photos ul li {
+  list-style: none;
+}
+
+.radar {
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  padding-right: 22px;
+  padding-top: 5px;
+}
+
+/* tablet media query */
 @media screen and (max-width: 768px) {
-
-  #albums{
+  #albums {
     height: 50%;
-    width:100%;
+    width: 100%;
     background-color: #2F374F;
-   display: flex;
-   flex-wrap: wrap;
-   /* padding-right: 30px; */
-  flex-direction:row;
-  justify-content: start;
+    display: flex;
+    flex-wrap: wrap;
+    /* padding-right: 30px; */
+    flex-direction: row;
+    justify-content: start;
   }
 
-  .img1{
+  .img1 {
     /* height: 1000PX; */
     /* margin-top: 10px; */
     width: 25%;
     flex-wrap: wrap;
-align-items: flex-start;
-
- }
-
-
-  .imageheavy{
-    height: 100px;
-    width:120px;
-    padding-left: 12px;
-
+    align-items: flex-start;
   }
-  .title{
+
+  .imageheavy {
+    height: 100px;
+    width: 120px;
+    padding-left: 12px;
+  }
+
+  .title {
     height: 20px;
     width: 100%;
     font-size: 10px;
     text-align: center;
     line-height: 16px;
-
   }
 
+  .nav-list {
+    height: 90px;
+    width: 159%;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    right: 308px;
+    text-align: center;
+  }
 
+  .nav-list ul li {
+    /* display: inline; */
+    /* text-align: center; */
+    position: relative;
+    /* left:100px; */
+    margin-left: none;
+    font-size: 15px;
+    text-transform: uppercase;
+  }
 
-
-
+  .photo1 {
+    height: 150px;
+    width: 180px;
+    ;
+  }
 }
