--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ footer {
 
 } */
 .sect1 {
-  height: 500px;
+  /* height: 500px; */
   width: 100%;
   /* background-color: purple; */
   right: 0;
@@ -293,6 +293,34 @@ footer {
   text-align: center;
   padding-right: 22px;
   padding-top: 5px;
+}
+
+
+.sect2{
+  /* height: 400px; */
+  width: 100%;
+  /* background-color: blue; */
+  display: flex;
+  padding-bottom: 30px;
+}
+
+.rounded{
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+.b-r{
+  border-radius: 100px;
+}
+
+.sma09{
+  text-align: center;
+  font-size: 20px;
+
+}
+
+.rounded ul li {
+  list-style: none;
 }
 
 /* tablet media query */
