--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ footer {
 
 } */
 .sect1 {
-  /* height: 500px; */
+  height: 500px;
   width: 100%;
   /* background-color: purple; */
   right: 0;
@@ -259,7 +259,7 @@ footer {
 }
 
 .lil-albi {
-  /* height: 60px; */
+  height: 60px;
   width: 100%;
   /* background-color: green; */
   padding-left: 10px;
@@ -297,7 +297,7 @@ footer {
 
 
 .sect2{
-  /* height: 400px; */
+  height: 400px;
   width: 100%;
   /* background-color: blue; */
   display: flex;
@@ -323,7 +323,8 @@ footer {
   list-style: none;
 }
 
-/* tablet media query */
+
+/* tablet media query M */
 @media screen and (max-width: 768px) {
   #albums {
     height: 50%;
@@ -383,4 +384,77 @@ footer {
     width: 180px;
     ;
   }
+}
+
+/* small devices S */
+@media screen and (max-width: 600px){
+
+  .nav-list {
+    height: 90px;
+    width: 140%;
+    background-color: #2F374F;
+    display:flex;
+    padding-left: 187px;
+flex-direction: row;
+}
+
+.nav-list ul li {
+  display: inline;
+  text-align: center;
+  position: relative;
+  right: 150px;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+#albums {
+  height: 100%;
+  width: 100%;
+  background-color: #2F374F;
+  display: flex;
+  flex-wrap: wrap;
+  /* padding-right: 30px; */
+  flex-direction: row;
+  justify-content: start;
+}
+
+.img1 {
+  /* height: 1000PX; */
+  /* margin-top: 10px; */
+  width: 45%;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  padding-bottom: 40px;
+}
+
+.imageheavy {
+  height: 200px;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.lil-albi{
+  display: none;
+}
+
+.sect1{display: none;}
+
+.sect2{
+  position: relative;
+  top:500px;
+  right: 50px;
+
+}
+
+.rounded{
+  padding-top: 20px;
+
+}
+
+.b-r{
+  border-radius: 100px;
+  font-size: 30px;
+}
+
+
+
 }
