--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 .container {
   width: 100%;
   height: 100vh;
-  background-color: yellow;
+  /* background-color: yellow; */
   overflow-y: scroll;
   display: flex;
 }
@@ -35,7 +35,7 @@ main {
 }
 
 .left-nav {
-  height: 100%;
+  /* height: 100%; */
   width: 250px;
   background-color: orange;
 }
@@ -55,6 +55,12 @@ ul li a {
   height: 60px;
   /* width: 100%; */
   margin: 10px 5px;
+}
+
+.rambo{
+height: 64px;
+width:100%;
+padding-top: 20px;
 }
 
 .name {
@@ -148,6 +154,16 @@ span {
   text-transform: uppercase;
 }
 
+/* .light  {
+  border: 5px solid red;
+
+  width: 20%;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+
+} */
+
 .nav-list ul li a {
   color: grey;
   font-weight: bold;
@@ -199,6 +215,28 @@ span {
   padding-top: 90px;
   overflow-y: scroll;
 }
+
+.list ul li a:hover,
+.nav-list ul li a:hover{
+  color: white;
+}
+.play-list span:hover,
+.play-list ul li a:hover{
+  color:white;
+}
+
+ .name ul li span:hover{
+  color:white;
+}
+
+/* #albums .imageheavy:hover{
+opacity: 0.5;
+background-color:#ffffff;
+background-image: url('/Users/mac/Desktop/Corso Boolean/exe25/html-css-spotifyweb/img 2/play.jpg');
+background-position: center;
+background-repeat: no-repeat;
+
+  } */
 
 #call-to-action {
   position: fixed;
@@ -258,6 +296,10 @@ footer {
   display: flex;
 }
 
+.hidden{
+  display: none;
+}
+
 .lil-albi {
   height: 60px;
   width: 100%;
@@ -297,7 +339,7 @@ footer {
 
 
 .sect2{
-  height: 400px;
+  /* height: 400px; */
   width: 100%;
   /* background-color: blue; */
   display: flex;
@@ -335,6 +377,10 @@ footer {
     /* padding-right: 30px; */
     flex-direction: row;
     justify-content: start;
+  }
+
+  .rambo{
+    display: none;
   }
 
   .img1 {
@@ -446,7 +492,7 @@ flex-direction: row;
 }
 
 .rounded{
-  padding-top: 20px;
+  padding-top: 50px;
 
 }
 
@@ -454,6 +500,126 @@ flex-direction: row;
   border-radius: 100px;
   font-size: 30px;
 }
+
+
+
+}
+/* xs devices Media query */
+@media screen and (max-width: 576px) {
+
+  .list {
+    height: 15%;
+    width: 100%;
+    background-color: black;
+    padding: 5px 5px;
+    line-height: 31px;
+  }
+
+  .list ul li span{
+    display: none;
+  }
+
+  .left-nav .logo .spotify{
+    display: none;
+  }
+
+
+ .rambo{
+   display: flex;
+    font-size: 20px;
+  }
+
+
+  .left-nav {
+    /* height: 100%; */
+    width: 60px;
+    background-color: orange;
+  }
+
+  .spotify {
+    display: none;
+    height: 60px;
+    /* width: 100%; */
+    margin: 10px 5px;
+  }
+
+
+  .main-content {
+    width: calc(100% - 35px);
+    height: 100%;
+    background-color: #2f374f;
+    right: 0;
+    bottom: 0;
+    padding-top: 90px;
+    overflow-y: scroll;
+  }
+
+  #albums {
+    height: 100%;
+    width: 100%;
+    background-color: #2F374F;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .recent {
+    padding-left: 20px;
+  }
+
+
+
+
+  .play-list {
+    height: 60%;
+    width: 100%;
+    background-color: black;
+    overflow-y: scroll;
+  }
+
+  .play-list ul li{
+    display:none;
+  }
+
+  .play-list h4{
+    display: none;
+  }
+.play-list span{
+  display: none;
+
+}
+
+#call-to-action {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: black;
+  width: calc(100% - 60px);
+  height: 90px;
+  opacity: 0.5;
+  text-align: right;
+  z-index: 1;
+}
+
+
+.nav-footer .name li a{
+  height: 30px;
+  font-size: 25px;
+  padding-left:5px;
+  line-height: 45px;
+}
+.nav-footer .name span{
+  display: none;
+}
+
+
+.sect2 {
+    position: relative;
+    top: 500px;
+    right: -44px;
+  }
+
+
 
 
 
