--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   width: 100%;
   height: 100vh;
   /* background-color: yellow; */
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   display: flex;
 }
 
@@ -32,6 +32,7 @@ body {
 main {
   display: flex;
   height: calc(100% - 90px);
+  width: 100%;
 }
 
 .left-nav {
@@ -232,6 +233,10 @@ span {
 #albums .imageheavy:hover{
 border:2px solid red;
 
+  }
+
+  .sect1 .photos .photo1:hover{
+    border:2px solid red;
 
   }
 
@@ -547,24 +552,26 @@ align-content: space-around;
 
   .one{
     height: 90px;
-    width: 35%;
+    width: 30%;
   display: flex;
   justify-content: space-around;
   padding-top: 10px;
 
   }
 
-  footer {
-    position: fixed;
-    height: 90px;
-    width: 100%;
-    background-color: black;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    margin-bottom: 0px;
-    display: flex;
+
+  .mid-sck{
+    padding-top: 20px;
+  font-size: 8px;
+  height: 40px;
+
   }
+
+  .two{
+    width: 60%;
+  }
+
+
 
 
 
